# AgentGate

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  locustfile.py  pyproject.toml  test.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 00cdbd72e6d8_init_session_and_session_event.py  0e39e5a76802_stage5_task_and_schedule.py  a1b2c3d4e5f6_stage6_memory_item.py  c4d5e6f7a8b9_session_event_seq_unique.py  eb775c0e86ec_stage4_tenant_and_api_key.py
app/: __init__.py  config.py  deps.py  main.py
app/api/: health.py
app/async_/: __init__.py  idempotency.py  lock.py  queue.py  redis_queue.py  scheduler.py  worker.py
app/context/: compactor.py  context_builder.py  projection.py  session_store.py  tokenizer.py
app/domain/: enums.py  errors.py  events.py  llm.py  memory.py  models.py  principal.py  skill.py  subagent.py  tool.py
app/observability/: logging.py  metrics.py
app/orchestration/: agent_loop.py  session_lock.py  state.py  subagent.py  tool_executor.py
app/persistence/: db.py  migrate.py  redis_client.py  tables.py
app/resilience/: __init__.py  (+5 more)
ops/: benchmark.md
scripts/: seed_api_key.py
tests/: conftest.py  test_async.py  test_auth.py  test_chat_e2e.py  test_compaction.py  test_context_budget.py  test_loop_recovery.py  test_memory.py  test_model_router.py  test_projection.py  test_prompt_assembly.py  test_resilience.py  test_skills.py  test_smoke.py  test_subagent.py  test_tool_e2e.py  test_tool_executor.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+53 files in other folders)
