[project]
name = "agentgate"
version = "0.0.1"
description = "AgentGate —— AI Agent 网关与运行时"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.32",
    "pydantic~=2.9",
    "pydantic-settings~=2.6",
    "sqlalchemy[asyncio]~=2.0.36",
    "asyncpg~=0.30",
    "alembic~=1.14",
    "redis~=5.2",
    "structlog~=24.4",
    "orjson~=3.10",
    "httpx~=0.27",
    "apscheduler~=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "pytest-asyncio~=0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
